<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.login.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".93" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/send_fund_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_25"
            android:text="@string/IDS_SEND_FUND"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/send_fund_title_text"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintTop_toTopOf="@id/send_fund_title_text"
            app:srcCompat="@drawable/ic_close" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_name_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20"
            android:text="@string/IDS_USER_NAME_OR_WALLET_ADDRESS"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/send_fund_title_text"
            android:contentDescription="@string/IDS_USER_NAME_TITLE"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_name_editText"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:hint="@string/IDS_USER_NAME_OR_WALLET_ADDRESS"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/user_name_title_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/enter_pin_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_25"
            android:text="@string/IDS_ENTER_YOUR_PIN"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/user_name_editText" />

        <com.mukesh.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4"
            android:inputType="number"
            app:OtpItemCount="4"
            app:OtpItemSpacing="@dimen/dimen_15"
            app:OtpLineColor="@color/dark_gray"
            app:OtpLineWidth="@dimen/dimen_4"
            app:OtpViewType="line"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/enter_pin_textView"
            android:contentDescription="@string/IDS_OTP"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_56"
            android:layout_marginTop="@dimen/dimen_150"
            android:background="@drawable/ic_button_inactive_bg"
            android:text="@string/IDS_CONTINUE"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/otp_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>